@@ -205,6 +205,6 @@ protected Object parse(Object value, String pattern) throws ParseException {
       if (posDouble != 0 && (posDouble < Float.MIN_VALUE || posDouble > Float.MAX_VALUE)) {
           throw new ConversionException("Supplied number is not of type Float: "+parsed);
       }
-      return new Float(parsed.floatValue()); // unlike superclass it returns Float type
+      return Float.valueOf(parsed.floatValue()); // unlike superclass it returns Float type
    }
 }
